--- a/ApplicationAndApplicationModule/app/build.gradle
+++ b/ApplicationAndApplicationModule/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "19.1.0"
 
     defaultConfig {
-        applicationId "at.wada811.applicationandmodule"
+        applicationId "at.wada811.applicationandapplicationmodule"
         minSdkVersion 10
         targetSdkVersion 19
         versionCode 1
